Fixed the alignment of list items of footer

--- a/css/yoga.css
+++ b/css/yoga.css
@@ -408,7 +408,10 @@ footer a:focus {
   text-align: left;
   margin-top: 0.75rem;
 }
-
+.footer-container .col ul{
+	padding-left: 0;
+  list-style: none;
+}
 .footer-container .col ul li a {
   /* text-decoration: none; */
   color: rgb(255, 255, 255);
